--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <input type="password" required placeholder="Passwort?"><br>
           <input type="submit" required>
       </form>
-      <input type="button" value="Information" onclick="alert('Hallo das ist ein Test!')"
+      <input type="button" value="Information" onclick="alert('Hallo das ist ein Test!')">
   </div>
 </body>
 <style>
